<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context=".view.layout.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Color_titulo_app"
        android:text="@string/txt_edit_imc"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/text_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableTint="#FEFEFE"
        android:ems="10"
        android:hint="@string/txt_edit_peso"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/text_altura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:autofillHints=""
        android:backgroundTint="#9A9898"
        android:drawableTint="#F4F1F1"
        android:ems="10"
        android:hint="@string/txt_edit_altura"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/text_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:backgroundTint="@color/color_buttons"
        android:text="@string/txt_edit_calcular"
        app:layout_constraintBottom_toTopOf="@+id/image_homem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_altura" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="68dp"
        android:background="#F3F0F0"
        android:text="@string/txt_edit_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/image_homem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toEndOf="@+id/button_calcular" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        app:layout_constraintBottom_toTopOf="@+id/image_homem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_status"
        app:layout_constraintVertical_bias="1.0"
        android:enabled="false"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_homem"
        android:layout_width="226dp"
        android:layout_height="110dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/image_mulher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/escala_imc_logo" />

    <ImageView
        android:id="@+id/image_mulher"
        android:layout_width="221dp"
        android:layout_height="101dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/obesidade" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>