<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Color_titulo_app"
        android:text="@string/txt_edit_imc"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/text_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableTint="#FEFEFE"
        android:ems="10"
        android:hint="@string/txt_edit_peso"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo" />

    <EditText
        android:id="@+id/text_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:backgroundTint="#9A9898"
        android:drawableTint="#F4F1F1"
        android:ems="10"
        android:hint="@string/txt_edit_altura"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_peso" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/color_buttons"
        android:text="@string/txt_edit_calcular"
        app:layout_constraintBottom_toTopOf="@+id/image_homem"
        app:layout_constraintEnd_toStartOf="@+id/text_status"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_altura"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:background="#F3F0F0"
        android:text="@string/txt_edit_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/image_homem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_altura"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/image_homem"
        android:layout_width="323dp"
        android:layout_height="149dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/image_mulher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/escala_imc_logo" />

    <ImageView
        android:id="@+id/image_mulher"
        android:layout_width="322dp"
        android:layout_height="176dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/obesidade" />


</androidx.constraintlayout.widget.ConstraintLayout>